# rag-auditor

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
docs/sample/: acme_refund_policy.txt
rag_auditor/: __init__.py  cli.py
rag_auditor/auditors/: chunking.py  lost_in_middle.py  retrieval.py  rg_alignment.py
rag_auditor/ingest/: loader.py
rag_auditor/llm/: __init__.py  anthropic_llm.py  base.py  openai_llm.py
rag_auditor/reranker/: __init__.py  base.py  cohere_reranker.py  crossencoder.py
rag_auditor/utils/: chunker.py  embeddings.py  report.py
tests/: test_auditors.py
